--- a/public/chat.html
+++ b/public/chat.html
@@ -3,8 +3,9 @@
 
 <!DOCTYPE html>
 <html>
-
+    
 <head>
+    <meta name=”viewport” content=”width=device-width, initial-scale=1″>
     <title>Chat App</title>
     <link rel='icon' href='/img/favicon.png'>
     <link rel='stylesheet' href='/css/styles.min.css'>
