--- a/public/chat.html
+++ b/public/chat.html
@@ -6,7 +6,7 @@
     
 <head>
     <meta name=”viewport” content=”width=device-width, initial-scale=1″>
-    <title>Chat App</title>
+    <title >Chat App</title>
     <link rel='icon' href='/img/favicon.png'>
     <link rel='stylesheet' href='/css/styles.min.css'>
 </head>
@@ -33,32 +33,32 @@
     
     <script id="message-template" type="text/html">
             <div class="message">
-                <p>
+                <p style="font-size:4vw">
                     <span class="message__name">{{username}}</span>
                     <span class="message__meta">{{createdAt}} </span>
 
                 </p>
-                <p> {{message}}</p>
+                <p style="font-size:4vw"> {{message}}</p>
             </div>
     </script>
 
     <script id="location-message-template" type="text/html">
             <div class="message">
-                <p>
+                <p style="font-size:4vw">
                     <span class="message__name"> {{username}}</span>
                     <span class="message__meta">{{createdAt}} </span>
 
                 </p>
-                <p><a href="{{url}}" target=_blank>My current location</a></p>
+                <p style="font-size:4vw"><a href="{{url}}" target=_blank>My current location</a></p>
             </div>
     </script>
 
 <script id="sidebar-template" type="text/html">
-    <h2 class='room-title'>{{room}} </h2>
-    <h3 class='list-title'>Users </h3>
-    <ul class="users">
+    <h2 style="font-size:4vw" class='room-title'>{{room}} </h2>
+    <h3 style="font-size:4vw" class='list-title'>Users </h3>
+    <ul  class="users">
         {{#users}}
-            <li>{{username}}</li>
+            <li style="font-size:4vw">{{username}}</li>
         {{/users}}
     </ul>
 </script>
