--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <div class=" centered-form">
         <div class="centered-form__box">
 
-            <h1 style="font-size:4vw">Join</h1>
+            <h1 >Join</h1>
             <form action="/chat.html">
                 <label> Display name</label>
                 
