--- a/public/chat.html
+++ b/public/chat.html
@@ -33,32 +33,32 @@
     
     <script id="message-template" type="text/html">
             <div class="message">
-                <p style="font-size:4vw">
+                <p >
                     <span class="message__name">{{username}}</span>
                     <span class="message__meta">{{createdAt}} </span>
 
                 </p>
-                <p style="font-size:4vw"> {{message}}</p>
+                <p > {{message}}</p>
             </div>
     </script>
 
     <script id="location-message-template" type="text/html">
             <div class="message">
-                <p style="font-size:4vw">
+                <p >
                     <span class="message__name"> {{username}}</span>
                     <span class="message__meta">{{createdAt}} </span>
 
                 </p>
-                <p style="font-size:4vw"><a href="{{url}}" target=_blank>My current location</a></p>
+                <p ><a href="{{url}}" target=_blank>My current location</a></p>
             </div>
     </script>
 
 <script id="sidebar-template" type="text/html">
-    <h2 style="font-size:4vw" class='room-title'>{{room}} </h2>
-    <h3 style="font-size:4vw" class='list-title'>Users </h3>
+    <h2  class='room-title'>{{room}} </h2>
+    <h3  class='list-title'>Users </h3>
     <ul  class="users">
         {{#users}}
-            <li style="font-size:4vw">{{username}}</li>
+            <li >{{username}}</li>
         {{/users}}
     </ul>
 </script>
